crates/rune-cli/tests/snapshots/arguments__a_flag_typed_on_a_command_that_does_not_take_it_names_both_sides-2.snap
---
source: crates/rune-cli/tests/arguments.rs
description: "--root typed on a command with no options at all"
expression: stderr(&no_options)
---
`--root` is not an option of `rune list`

`rune list` takes no options of its own.

`--root` works on:
  rune run
  rune inspect
