crates/rune-cli/tests/snapshots/arguments__a_flag_typed_on_a_command_that_does_not_take_it_names_both_sides.snap
---
source: crates/rune-cli/tests/arguments.rs
description: "--root typed on a command that has its own options"
expression: stderr(&refused)
---
`--root` is not an option of `rune init`

`rune init` accepts:
  --from-package-json  Seed the starter with the scripts from that same package.json

`--root` works on:
  rune run
  rune inspect
