crates/rune-cli/tests/snapshots/arguments__a_name_nothing_defines_names_the_scope_and_still_suggests.snap
---
source: crates/rune-cli/tests/arguments.rs
description: a misspelling asked for with --root
expression: stderr(&output)
---
no script named `biuld` at the repository root

did you mean `build`?

scripts at the repository root:
  build
  test
