crates/rune-cli/tests/snapshots/arguments__a_package_script_asked_for_at_the_root_scope_names_both.snap
---
source: crates/rune-cli/tests/arguments.rs
description: "a script only the package defines, asked for with --root"
expression: stderr(&output)
---
no script named `routes` at the repository root

`--root` ignores packages/legacy/rune.config.ts, which does define `routes`.
drop `--root` to run it.
