crates/rune-cli/tests/snapshots/arguments__every_other_parsing_failure_is_untouched-2.snap
---
source: crates/rune-cli/tests/arguments.rs
description: a subcommand that does not exist
expression: stderr(&unknown)
---
error: unrecognized subcommand 'nonsense'

Usage: rune <COMMAND>

For more information, try '--help'.
