crates/rune-cli/tests/snapshots/arguments__the_default_scope_is_unchanged.snap
---
source: crates/rune-cli/tests/arguments.rs
description: a misspelling at the default scope
expression: stderr(&output)
---
no script named `biuld`

did you mean `build`?

scripts defined here:
  build
  routes
  test
